--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ElliotXLeo/rick-and-morty/issues"
   },
-  "homepage": "https://github.com/ElliotXLeo/rick-and-morty#readme"
+  "homepage": "https://github.com/ElliotXLeo/rick-and-morty#readme",
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
