--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto: Rick and Morty con ReactJS + Webpack + SASS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve --mode development --open --devtool eval-cheap-module-source-map",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,29 @@
   },
   "homepage": "https://github.com/ElliotXLeo/rick-and-morty#readme",
   "dependencies": {
+    "core-js": "^3.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.2",
+    "csv-loader": "^3.0.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0",
+    "json5": "^2.2.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "toml": "^3.0.0",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "xml-loader": "^1.2.1",
+    "yamljs": "^0.3.0"
   }
 }
